# multi-task-learning

./: .gitignore  README.md  pyproject.toml
mt_pack/: multi_task.py  utils.py
mt_pack/tasks/: gpr.py  nn_mt.py  nn_mt2.py  nn_st.py  transform.py
